<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="15dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction_title"
            android:textColor="#ffffff" android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:textColor="#c0c0c0" android:layout_marginBottom="10dp" android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_title"
            android:textColor="#ffffff" android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/copyright"
            android:textColor="#c0c0c0" android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_warranties_title"
            android:textColor="#ffffff" android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_warranties"
            android:textColor="#c0c0c0" android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/limitation_liability_title"
            android:textColor="#ffffff" android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/limitation_liability"
            android:textColor="#c0c0c0" android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/termination_title"
            android:textColor="#ffffff" android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/termination"
            android:textColor="#c0c0c0" android:textSize="15dp"/>
    </LinearLayout>

</ScrollView>