<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" android:padding="15dp">

    <RelativeLayout
        android:id="@+id/relativeLayoutBees"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon2" android:contentDescription="@string/img_cont_desc_bee_logo" android:layout_marginRight="11dp" android:layout_marginLeft="11dp"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView1"
            android:gravity="center_horizontal"
            android:paddingTop="25dp"
            android:text="@string/app_name"
            android:textColor="#ffffff" android:textSize="25dp"/>

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewTitle"
            android:layout_below="@+id/textViewTitle"
            android:gravity="center_horizontal"
            android:text="@string/app_ver"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#c0c0c0" />

        <TextView
            android:id="@+id/textViewCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewVersion"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textViewVersion"
            android:gravity="center_horizontal"
            android:text="@string/app_copyright"
            android:textColor="#c0c0c0" android:textSize="20dp"/>

        <TextView
            android:id="@+id/textViewWeb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewVersion"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textViewCopyright"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/app_site"
            android:textSize="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutEventful"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewEventfulSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewEventful"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textViewEventful"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/eventful_site" android:textSize="20dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eventful_logo" android:contentDescription="@string/img_cont_desc_bee_logo" android:paddingRight="15dp"/>

        <TextView
            android:id="@+id/textViewEventful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView2"
            android:gravity="center_horizontal"
            android:text="@string/all_events_from"
            android:textColor="#ffffff" android:textSize="20dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/about_disclaimer"
        android:textColor="#c0c0c0"
        android:textStyle="italic" android:layout_marginBottom="5dp" android:textSize="16dp"/>

</LinearLayout>